--- a/BE/wedding101/wedding101/src/main/resources/application.properties
+++ b/BE/wedding101/wedding101/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database ??
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/example?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/wedding101_db?serverTimezone=UTC&characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=ssafy
 
@@ -9,3 +9,6 @@ spring.datasource.password=ssafy
 spring.jpa.hibernate.ddl-auto=create
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+
+
+server.port=3313
