--- a/BE/wedding101/build.gradle
+++ b/BE/wedding101/build.gradle
@@ -12,6 +12,10 @@ configurations {
     compileOnly {
         extendsFrom annotationProcessor
     }
+    //logback 종속성 제거
+    all {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-logging'
+    }
 }
 
 repositories {
@@ -39,6 +43,10 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
     // Swagger Ui
     implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
+    // logback
+//    implementation 'org.springframework.boot::spring-boot-starter-web'
+    // log4j2
+    implementation 'org.springframework.boot:spring-boot-starter-log4j2'
 }
 
 tasks.named('test') {
