--- a/BE/wedding101/src/main/resources/application.yml
+++ b/BE/wedding101/src/main/resources/application.yml
@@ -1,5 +1,6 @@
 # Spring boot server port set
-server.port=8080
+server:
+  port: 8081
 
 # Spring security Oauth2 client registration
 #spring.security.oauth2.client.registration.naver.client-id=<client id>
@@ -27,34 +28,48 @@ server.port=8080
 #spring.security.oauth2.client.provider.kakao.user-info-uri=
 #spring.security.oauth2.client.provider.kakao.user-name-attribute=
 
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring:
+  # ?????? ?? - MySQL
+  datasource:
+    url: jdbc:mysql://localhost:3306/wedding101_db?characterEncoding=UTF-8
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    username: root
+    password: ssafy
 
-# Spring JPA set
-spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.generate-ddl=true
+  profiles:
+    include: db
+
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
+  # JPA ??
+  jpa:
+    database: mysql
+    hibernate:
+      ddl-auto: update
+      use-new-id-generator-mappings: true
+    generate-ddl: true
+    database-platform: org.hibernate.dialect.MySQL8Dialect
+
+  jackson:
+    serialization:
+      fail-on-empty-beans: false
 
 #spring.jpa.show-sql=true
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
-spring.jpa.hibernate.use-new-id-generator-mappings=true
-spring.jackson.serialization.fail-on-empty-beans=false
 
-# MySQL database set
-spring.profiles.include=db
-spring.datasource.url=jdbc:mysql://localhost:3306/wedding101_db?characterEncoding=UTF-8
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=ssafy
+springdoc:
+  swagger-ui:
+    path: /swagger-ui/index.html
+    groups-order: desc
+    operations-sorter: method
+    disable-swagger-default-url: true
+    display-request-duration: true
 
-# Swagger UI Set
-springdoc.swagger-ui.path= /swagger-ui.html
-springdoc.swagger-ui.groups-order=desc
-springdoc.swagger-ui.operations-sorter=method
-springdoc.swagger-ui.disable-swagger-default-url=true
-springdoc.swagger-ui.display-request-duration=true
-springdoc.api-docs.path= /api-docs
-springdoc.show-actuator=true
-springdoc.default-consumes-media-type= application/json
-springdoc.default-produces-media-type= application/json
-springdoc.paths-to-match=
-    - /v1/**
+  api-docs:
+    path: /api-docs
+
+  show-actuator:  true
+  default-consumes-media-type: application/json
+  default-produces-media-type: application/json
+  paths-to-match: /**
