[205],[208] 회원탍퇴, 수정 완료
Former-commit-id: d59231fa8ccfffd74a34644b24645f4c31eae881

--- a/BE/wedding101/build.gradle
+++ b/BE/wedding101/build.gradle
@@ -47,6 +47,8 @@ dependencies {
 //    implementation 'org.springframework.boot::spring-boot-starter-web'
     // log4j2
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
+    //유효성 검사 처리
+    implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
 tasks.named('test') {
