Fix : gradlew permission error 처리
Former-commit-id: 01819f2bc37c62caa926c17cf3d82e50f58eebbf

--- a/BE/wedding101/build.gradle
+++ b/BE/wedding101/build.gradle
@@ -49,6 +49,11 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-log4j2'
     //유효성 검사 처리
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    //JUnit4 추가
+	testImplementation("org.junit.vintage:junit-vintage-engine") {
+		exclude group: "org.hamcrest", module: "hamcrest-core"
+	}
+
 }
 
 test {
