Fix : build.gradle
Former-commit-id: c0db746ca8f68eec373ea6dfd9e02739b219b32a

--- a/BE/wedding101/src/main/resources/application.yml
+++ b/BE/wedding101/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 # Spring boot server port set
 server:
-  port: 8081
+  port: 8085
 
 # Spring security Oauth2 client registration
 #spring.security.oauth2.client.registration.naver.client-id=<client id>
@@ -31,7 +31,7 @@ server:
 spring:
   # ?????? ?? - MySQL
   datasource:
-    url: jdbc:mysql://localhost:3306/wedding101_db?characterEncoding=UTF-8
+    url: jdbc:mysql://http://i8a101.p.ssafy.io:3306/wedding101_db?characterEncoding=UTF-8
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: ssafy
