back : [218] 접근ID로 정보조회
Former-commit-id: caaeb7decc1c0cc8dd6a06e26aa32f775095a406

--- a/BE/wedding101/src/main/resources/application.yml
+++ b/BE/wedding101/src/main/resources/application.yml
@@ -31,7 +31,7 @@ server:
 spring:
   # ?????? ?? - MySQL
   datasource:
-    url: jdbc:mysql://http://i8a101.p.ssafy.io:3306/wedding101_db?characterEncoding=UTF-8
+    url: jdbc:mysql://localhost:3306/wedding101_db?characterEncoding=UTF-8
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: ssafy
