--- a/BE/wedding101/Dockerfile
+++ b/BE/wedding101/Dockerfile
@@ -1,24 +1,4 @@
-FROM gradle:7.4-jdk11-alpine as builder
-WORKDIR /build
-
-COPY build.gradle settings.gradle /build/
-RUN gradle build -x test --parallel --continue > /dev/null 2>&1 || true
-
-COPY . /build
-RUN gradle build -x test --parallel
-
-FROM openjdk:11.0-slim
-WORKDIR /app
-
-COPY --from=builder /build/build/libs/*-SNAPSHOT.jar ./app.jar
-
-EXPOSE 8085
-
-USER nobody
-ENTRYPOINT [                                                \
-   "java",                                                 \
-   "-jar",                                                 \
-   "-Djava.security.egd=file:/dev/./urandom",              \
-   "-Dsun.net.inetaddr.ttl=0",                             \
-   "app.jar"              \
-]
+FROM openjdk:11-jdk
+ARG JAR_FILE=build/libs/*.jar
+COPY ${JAR_FILE} app.jar
+ENTRYPOINT ["java", "-jar", "-Duser.timezone=Asia/Seoul", "/app.jar"]
