--- a/BE/wedding101/Dockerfile
+++ b/BE/wedding101/Dockerfile
@@ -1,4 +1,7 @@
-FROM openjdk:11-jdk
+FROM openjdk:11-jdk-slim
+
 ARG JAR_FILE=build/libs/*.jar
+
 COPY ${JAR_FILE} app.jar
-ENTRYPOINT ["java", "-jar", "-Duser.timezone=Asia/Seoul", "/app.jar"]
+
+ENTRYPOINT ["java", "-jar", "/app.jar"]
