--- a/FE/wedding101/package.json
+++ b/FE/wedding101/package.json
@@ -19,12 +19,14 @@
     "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-fullpage": "^0.1.19",
+    "react-redux": "^8.0.5",
     "react-router": "^6.7.0",
     "react-router-dom": "^6.7.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-scroll-wheel-handler": "^2.2.0",
     "react-slick": "^0.29.0",
+    "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
