--- a/BE/wedding101/src/main/resources/application.yml
+++ b/BE/wedding101/src/main/resources/application.yml
@@ -31,7 +31,7 @@ server:
 spring:
   # ?????? ?? - MySQL
   datasource:
-    url: jdbc:mysql://i8a101.p.ssafy.io:3306/wedding101_db?characterEncoding=UTF-8&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/wedding101_db?characterEncoding=UTF-8&serverTimezone=UTC
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: root
     password: ssafy
