CI/CD : modifying Docker file
Former-commit-id: cf14ecd34a926206d4c8be8ec18aaf95d2cea4d2

--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:latest
+FROM node:18.13.0
 
 WORKDIR /usr/src/app
 
@@ -10,4 +10,6 @@ COPY ./ /usr/src/app/
 
 EXPOSE 3000
 
-CMD ["npm", "run", "build"]
+RUN npm run build
+
+CMD ["/bin/bash"]
