--- a/BE/wedding101/build.gradle
+++ b/BE/wedding101/build.gradle
@@ -23,6 +23,8 @@ repositories {
 }
 
 dependencies {
+    // Spring Cloud Starter AWS
+    implementation 'io.awspring.cloud:spring-cloud-starter-aws:2.4.4'
     // lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
