CI/CD : modify Dockerfile - add Volume mount
Former-commit-id: ba943992a9b72d702e83a8d056d914af9d000a31

--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -2,9 +2,8 @@ FROM node:18.13.0
 
 WORKDIR /usr/src/app
 
-COPY ./package* /usr/src/app/
+VOLUME . /usr/src/app
 
-RUN cd ./FE/wedding101
 RUN npm install
 RUN npm run build
 RUN npm install -g serve
