--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -1,7 +1,7 @@
 FROM node:18.13.0
 
 WORKDIR /usr/src/app
-COPY ./package* /usr/src/app
+COPY ./package* /usr/src/app/
 
 RUN npm install
 COPY ./ /usr/src/app/
