CI/CD : modify Dockerfile - handling volume mount issue
Former-commit-id: d9ef21898648be47a897978c9c897e4c37e82000

--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -5,10 +5,7 @@ COPY ./package* /usr/src/app/
 
 RUN npm install
 COPY ./ /usr/src/app/
-
-RUN npm run build
-RUN npm install -g serve
-RUN serve -s build
+RUN npm start
 
 EXPOSE 3000
 
