[BE] AWS S3 파일 업로드 컨트롤러, 서비스 구성
Former-commit-id: 3ab342729765432dcedea26447c88ef7582529e8

--- a/BE/wedding101/src/main/resources/application.yml
+++ b/BE/wedding101/src/main/resources/application.yml
@@ -83,10 +83,10 @@ springdoc:
 cloud:
   aws:
     s3:
-      bucket: a101-wedding101-project
+      bucket: a101-wedding101-pjt
     credentials:
-      access-key: AKIASAR2BR5LC5PPCM5K
-      secret-key: 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
+      access-key: AKIASAR2BR5LCYLEDGWM
+      secret-key: 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
     region:
       static: ap-northeast-2
       auto: false
