--- a/BE/wedding101/build.gradle
+++ b/BE/wedding101/build.gradle
@@ -53,6 +53,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 
+jar {
+	    enabled = false
+}
+
 test{
     useJUnitPlatform()
 }
