CI/CD : modify Dockerfile & build.gradle
Former-commit-id: c9ac1c648bdae45f6af414b95257e4b79e04f10f

--- a/FE/wedding101/default.conf
+++ b/FE/wedding101/default.conf
@@ -1,8 +1,25 @@
 server {
-	listen 80;
-	location / {
-		root /etc/nginx/conf.d/build;
-		index  index.html index.htm;	
-		try_files $uri $uri/ /index.html;
-	}
+        listen 80 default_server;
+        listen [::]:80 default_server;
+        server_name wedding101.kr www.wedding101.kr;
+        return 301 https://$server_name$request_uri\;
+
+        location / {
+                root /etc/nginx/conf.d/build;
+                index  index.html index.htm;
+                try_files $uri $uri/ /index.html;
+        }
+}
+
+server{
+        listen 443 ssl;
+        listen [::]:443 ssl;
+
+        location /{
+                proxy_pass http://wedding101.kr:3000\;
+        }
+
+        location /api/ {
+                proxy_pass http://wedding101.kr:8081/\;
+        }
 }
