CI/CD : modify Dockerfile
Former-commit-id: 78036e9044da71d587a3b12cfa0223f3a5ccf896

--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -9,6 +9,6 @@ RUN npm install --silent
 RUN npm install react-scripts@5.0.1 -g --silent
 
 
-ENV CHOKIDAR_USEPOLLING=ture
+#ENV CHOKIDAR_USEPOLLING=ture
 EXPOSE 3000
 CMD ["npm", "run", "start"]
