CI/CD : modify Dockerfile
Former-commit-id: 4949d12dc9f2fb46c8a7c860cf964717468b3623

--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -1,3 +1,4 @@
 FROM nginx:latest
 RUN rm /etc/nginx/default.conf 
+RUN cp /usr/src/app/default.conf /etc/nginx/conf.d/defualt.conf
 COPY ./build /usr/share/nginx/html
