--- a/FE/wedding101/default.conf
+++ b/FE/wedding101/default.conf
@@ -1,25 +1,58 @@
-server {
-        listen 80 default_server;
-        listen [::]:80 default_server;
-        server_name wedding101.kr www.wedding101.kr;
-        return 301 https://$server_name$request_uri\;
+user  nginx;
+worker_processes  4; //우린 프젝은 서버 4개 사용하므로
 
-        location / {
-                root /etc/nginx/conf.d/build;
-                index  index.html index.htm;
-                try_files $uri $uri/ /index.html;
-        }
+error_log  /var/log/nginx/error.log error;
+pid        /var/run/nginx.pid;
+
+events {
+    worker_connections  1024;
 }
 
-server{
+http {
+    include       /etc/nginx/mime.types;
+    default_type  application/octet-stream;
+    
+		log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+											'$status $body_bytes_sent "$http_referer" '
+											'"$http_user_agent" "$http_x_forwarded_for"';
+                      
+    access_log  /var/log/nginx/access.log  main;
+
+    sendfile        on;
+    keepalive_timeout  65;
+    include /etc/nginx/conf.d/*.conf; 
+    // 기본설정파일(nginx.conf이외에 default.conf등 있으면 가져와서 쓰라는 
+    
+    server {
+        listen 80 default_server;
+        listen [::]:80 default_server;
+        server_name wedding101.kro.kr;
+				// 서버네임으로 들어오면 https로 연결해줌
+        return 301 https://\;
+    }
+
+    server {
         listen 443 ssl;
         listen [::]:443 ssl;
+        server_name wedding101.kro.kr;
 
-        location /{
-                proxy_pass http://wedding101.kr:3000\;
+				// 백엔드 연결 
+        location /api { 
+            proxy_pass  http://wedding101.kro.kr:8085;
+            proxy_redirect off;
+            proxy_buffering off;
+            proxy_set_header    Host ;
+            proxy_set_header    X-Real-IP ;
+            proxy_set_header    X-Forwarded-For ;
+            proxy_set_header    X-Forwarded-Host ;
         }
-
-        location /api/ {
-                proxy_pass http://wedding101.kr:8081/\;
+				// 프론트엔드 연결
+        location / {
+            proxy_pass http://wedding101.kro.kr:3000;
+            proxy_redirect off;
+            proxy_set_header    Host ;
+            proxy_set_header    X-Real-IP ;
+            proxy_set_header    X-Forwarded-For ;
         }
+    }
 }
