--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:latest
-RUN rm /etc/nginx/default.conf
 RUN cp ./default.conf /etc/nginx/conf.d/defualt.conf
 COPY ./build /usr/share/nginx/html
+CMD ["rm", "/etc/nginx/default.conf"]
