CI/CD : modify Dockerfile
Former-commit-id: 8a10e6e8c1894e165444eb5622a9aa8aa0331b2f

--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -1,5 +1,5 @@
 FROM nginx:latest
-RUN cp ./default.conf /etc/nginx/conf.d/defualt.conf
+RUN cp default.conf /etc/nginx/conf.d/
 RUN ls ./
 COPY ./build /usr/share/nginx/html
 CMD ["rm", "/etc/nginx/default.conf"]
