CI/CD : modify Dockerfile
Former-commit-id: ab929e067542a9a6a5f8133b5806a8e3fd7ef2c0

--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -1,5 +1,4 @@
 FROM nginx:latest
-RUN cp default.conf /etc/nginx/conf.d/
-RUN ls ./
+COPY ./default.conf /etc/nginx/conf.d/
 COPY ./build /usr/share/nginx/html
 CMD ["rm", "/etc/nginx/default.conf"]
