--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:latest
-COPY ./default.conf /etc/nginx/conf.d/
 COPY ./build /usr/share/nginx/html
-CMD ["rm", "/etc/nginx/default.conf"]
+CMD ["rm", "/etc/nginx/conf.d/default.conf"]
+COPY ./default.conf /etc/nginx/conf.d/
