--- a/FE/wedding101/default.conf
+++ b/FE/wedding101/default.conf
@@ -1,5 +1,5 @@
 user  nginx;
-worker_processes  4; //우린 프젝은 서버 4개 사용하므로
+worker_processes  4;
 
 error_log  /var/log/nginx/error.log error;
 pid        /var/run/nginx.pid;
@@ -12,22 +12,22 @@ http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
     
-		log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
-											'$status $body_bytes_sent "$http_referer" '
-											'"$http_user_agent" "$http_x_forwarded_for"';
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
                       
     access_log  /var/log/nginx/access.log  main;
 
     sendfile        on;
     keepalive_timeout  65;
     include /etc/nginx/conf.d/*.conf; 
-    // 기본설정파일(nginx.conf이외에 default.conf등 있으면 가져와서 쓰라는 
+    # 기본설정파일(nginx.conf이외에 default.conf등 있으면 가져와서 쓰라는)
     
     server {
         listen 80 default_server;
         listen [::]:80 default_server;
         server_name wedding101.kro.kr;
-				// 서버네임으로 들어오면 https로 연결해줌
+        # 서버네임으로 들어오면 https로 연결해줌
         return 301 https://\;
     }
 
@@ -36,7 +36,7 @@ http {
         listen [::]:443 ssl;
         server_name wedding101.kro.kr;
 
-				// 백엔드 연결 
+        # 백엔드 연결 
         location /api { 
             proxy_pass  http://wedding101.kro.kr:8085;
             proxy_redirect off;
@@ -46,7 +46,7 @@ http {
             proxy_set_header    X-Forwarded-For ;
             proxy_set_header    X-Forwarded-Host ;
         }
-				// 프론트엔드 연결
+        # 프론트엔드 연결
         location / {
             proxy_pass http://wedding101.kro.kr:3000;
             proxy_redirect off;
