--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -1,4 +1,5 @@
 FROM nginx:latest
 
-# COPY ./build /etc/nginx
+COPY ./.conf /etc/nginx/conf.d
 COPY ./build /usr/share/nginx/html
+CMD ["rm", "/etc/nginx/conf.d/default.conf"]
