--- a/FE/wedding101/.conf/myApp.conf
+++ b/FE/wedding101/.conf/myApp.conf
@@ -2,11 +2,7 @@ server {
     listen 80 default_server;
     listen [::]:80 default_server;
     server_name wedding101.kro.kr;
-
-    location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
-    }
+    return 301 https://$server_name/$request_uri;
 }
 
 server {
@@ -16,7 +12,7 @@ server {
 
     # 백엔드 연결 
     location /api { 
-        proxy_pass  http://wedding101.kro.kr:8085;
+        proxy_pass  http://i8a101.p.ssafy.io:8085;
         proxy_redirect off;
         proxy_buffering off;
         proxy_set_header    Host ;
@@ -26,7 +22,7 @@ server {
     }
     # 프론트엔드 연결
     location / {
-        proxy_pass http://wedding101.kro.kr:3000;
+        proxy_pass http://i8a101.p.ssafy.io:3000;
         proxy_redirect off;
         proxy_set_header    Host ;
         proxy_set_header    X-Real-IP ;
