CI/CD : reverse proxy setting6
Former-commit-id: bd1f1733cec27c14c572cd2870e3e390ab299578

--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -1,4 +1,5 @@
 FROM nginx:latest
 
-# COPY ./.conf /etc/nginx/conf.d
+COPY ./.conf /usr/share/nginx/
 COPY ./build /usr/share/nginx/html
+RUN ["mv","/usr/share/nginx/*.conf","/etc/nginx/conf.d"]
