--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -2,4 +2,4 @@ FROM nginx:latest
 
 COPY ./.conf /usr/share/nginx/
 COPY ./build /usr/share/nginx/html
-RUN ["mv","/usr/share/nginx/*.conf","/etc/nginx/conf.d"]
+RUN ["mv","/usr/share/nginx/\*.conf","/etc/nginx/conf.d"]
