CI/CD : reverse proxy setting 11
Former-commit-id: 87ea79f7f3276c6c63c8f9448c4d6777620d0012

--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -2,5 +2,5 @@ FROM nginx:latest
 
 COPY ./.conf /usr/share/nginx/
 COPY ./build /usr/share/nginx/html
-RUN ["mv","/usr/share/nginx/default.conf","/etc/nginx/conf.d"]
+RUN ["mv","/usr/share/nginx/default.conf","/etc/nginx/nginx.conf"]
 RUN ["mv","/usr/share/nginx/myApp.conf","/etc/nginx/conf.d"]
