--- a/FE/wedding101/.conf/myApp.conf
+++ b/FE/wedding101/.conf/myApp.conf
@@ -1,7 +1,7 @@
 server {
-    listen 80 default_server;
-    listen [::]:80 default_server;
-    server_name wedding101.kro.kr;
+    listen 80;
+    listen [::]:80;
+    server_name i8a101.p.ssafy.io wedding101.kro.kr;
     return 301 https://$server_name/$request_uri;
 }
 
@@ -12,20 +12,22 @@ server {
 
     # 백엔드 연결 
     location /api { 
-        proxy_pass  http://i8a101.p.ssafy.io:8085;
-        proxy_redirect off;
-        proxy_buffering off;
-        proxy_set_header    Host ;
-        proxy_set_header    X-Real-IP ;
-        proxy_set_header    X-Forwarded-For ;
-        proxy_set_header    X-Forwarded-Host ;
+        proxy_pass http://127.0.0.1:8085;
+        proxy_http_version 1.1;
+        proxy_set_header HOST $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     }
+
     # 프론트엔드 연결
     location / {
-        proxy_pass http://i8a101.p.ssafy.io:3000;
-        proxy_redirect off;
-        proxy_set_header    Host ;
-        proxy_set_header    X-Real-IP ;
-        proxy_set_header    X-Forwarded-For ;
+        proxy_pass http://127.0.0.1:3000;
+        proxy_http_version 1.1;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header   Upgrade $http_upgrade;
+        proxy_set_header   Connection keep-alive;
+        proxy_set_header   Host $host;
+        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header   X-Forwarded-Proto $scheme;
     }
 }
