--- a/FE/wedding101/.conf/myApp.conf
+++ b/FE/wedding101/.conf/myApp.conf
@@ -8,11 +8,11 @@ server {
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
-    server_name wedding101.kro.kr;
+    server_name i8a101.p.ssafy.io wedding101.kro.kr;
 
     # 백엔드 연결 
     location /api { 
-        proxy_pass http://127.0.0.1:8085;
+        proxy_pass http://i8a101.p.ssafy.io:8085;
         proxy_http_version 1.1;
         proxy_set_header HOST $host;
         proxy_set_header X-Real-IP $remote_addr;
@@ -21,7 +21,7 @@ server {
 
     # 프론트엔드 연결
     location / {
-        proxy_pass http://127.0.0.1:3000;
+        proxy_pass http://i8a101.p.ssafy.io:3000;
         proxy_http_version 1.1;
         proxy_cache_bypass $http_upgrade;
         proxy_set_header   Upgrade $http_upgrade;
