CI/CD : reverse proxy setting 14
Former-commit-id: c4ce6dfa3f2c81a7e432c72641cf1d8e9a0679c1

--- a/FE/wedding101/.conf/myApp.conf
+++ b/FE/wedding101/.conf/myApp.conf
@@ -8,6 +8,8 @@ server {
 server {
     listen 443 ssl;
     listen [::]:443 ssl;
+    ssl_certificate /etc/nginx/certs/default.crt;
+    ssl_certificate_key /etc/nginx/certs/default.key;
     server_name i8a101.p.ssafy.io wedding101.kro.kr;
 
     # 백엔드 연결 
