--- a/FE/wedding101/.conf/myApp.conf
+++ b/FE/wedding101/.conf/myApp.conf
@@ -1,6 +1,8 @@
 server {
     listen 80;
     listen [::]:80;
+    ssl_certificate /etc/nginx/certs/default.crt;
+    ssl_certificate_key /etc/nginx/certs/default.key;
     server_name i8a101.p.ssafy.io wedding101.kro.kr;
     return 301 https://$server_name/$request_uri;
 }
