--- a/FE/wedding101/.conf/myApp.conf
+++ b/FE/wedding101/.conf/myApp.conf
@@ -1,10 +1,8 @@
 server {
     listen 80;
     listen [::]:80;
-    # ssl_certificate /etc/letsencrypt/default.crt;
-    # ssl_certificate_key /etc/letsencrypt/default.key;
     server_name i8a101.p.ssafy.io wedding101.kro.kr;
-    
+
     # 백엔드 연결 
     location /api { 
         proxy_pass http://i8a101.p.ssafy.io:8085;
@@ -25,7 +23,7 @@ server {
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Proto $scheme;
     }
-    # return 301 https://$server_name/$request_uri;
+    return 301 https://$server_name/$request_uri;
 }
 
 # server {
