--- a/FE/wedding101/.conf/myApp.conf
+++ b/FE/wedding101/.conf/myApp.conf
@@ -1,19 +1,16 @@
+# non-WWW 주소 가상호스트 설정 : WWW로 리디렉트
 server {
-    listen 80;
-    listen [::]:80;
-    server_name i8a101.p.ssafy.io wedding101.kro.kr;
+   listen 80;
+   listen [::]:80;
+   server_name i8a101.p.ssafy.io wedding101.kro.kr;
+   return 301 $scheme://wedding101.kro.kr$request_uri;
+}
 
-    # 백엔드 연결 
-    location /api { 
-        proxy_pass http://i8a101.p.ssafy.io:8085;
-        proxy_http_version 1.1;
-        proxy_set_header HOST $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    }
-
-    # 프론트엔드 연결
-    location / {
+# WWW 주소 가상호스트 설정
+server {
+   listen 80;
+   server_name i8a101.p.ssafy.io wedding101.kro.kr;
+   location / { 
         proxy_pass http://i8a101.p.ssafy.io:3000;
         proxy_http_version 1.1;
         proxy_cache_bypass $http_upgrade;
@@ -22,9 +19,35 @@ server {
         proxy_set_header   Host $host;
         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header   X-Forwarded-Proto $scheme;
-    }
-    return 301 https://$server_name/$request_uri;
+   }
 }
+# server {
+#     listen 80;
+#     listen [::]:80;
+#     server_name i8a101.p.ssafy.io wedding101.kro.kr;
+
+#     # 백엔드 연결 
+#     location /api { 
+#         proxy_pass http://i8a101.p.ssafy.io:8085;
+#         proxy_http_version 1.1;
+#         proxy_set_header HOST $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#     }
+
+#     # 프론트엔드 연결
+#     location / {
+#         proxy_pass http://i8a101.p.ssafy.io:3000;
+#         proxy_http_version 1.1;
+#         proxy_cache_bypass $http_upgrade;
+#         proxy_set_header   Upgrade $http_upgrade;
+#         proxy_set_header   Connection keep-alive;
+#         proxy_set_header   Host $host;
+#         proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header   X-Forwarded-Proto $scheme;
+#     }
+#     return 301 https://$server_name/$request_uri;
+# }
 
 # server {
 #     listen 443 ssl;
