--- a/FE/wedding101/.conf/myApp.conf
+++ b/FE/wedding101/.conf/myApp.conf
@@ -11,7 +11,7 @@ server {
    listen 80;
    server_name i8a101.p.ssafy.io wedding101.kro.kr;
    location / { 
-        proxy_pass http://i8a101.p.ssafy.io:3000;
+        proxy_pass http://127.0.0.1:3000;
         proxy_http_version 1.1;
         proxy_cache_bypass $http_upgrade;
         proxy_set_header   Upgrade $http_upgrade;
