--- a/FE/wedding101/.conf/myApp.conf
+++ b/FE/wedding101/.conf/myApp.conf
@@ -2,23 +2,34 @@
 server {
    listen 80;
    listen [::]:80;
-   server_name i8a101.p.ssafy.io wedding101.kro.kr;
+   server_name wedding101.kro.kr www.wedding101.kro.kr;
    return 301 $scheme://wedding101.kro.kr$request_uri;
 }
 
-# WWW 주소 가상호스트 설정
 server {
-   listen 80;
-   server_name i8a101.p.ssafy.io wedding101.kro.kr;
-   location / { 
-        proxy_pass http://127.0.0.1:3000;
-        proxy_http_version 1.1;
-        proxy_cache_bypass $http_upgrade;
-        proxy_set_header   Upgrade $http_upgrade;
-        proxy_set_header   Connection keep-alive;
-        proxy_set_header   Host $host;
-        proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header   X-Forwarded-Proto $scheme;
+   listen 443 ssl;
+   listen [::]:443;
+   server_name wedding101.kro.kr www.wedding101.kro.kr;
+   ssl on;
+   ssl_certificate fullchain.pem;
+   ssl_certificate_key privkey.pem;
+   ssl_trusted_certificate chain.pem;
+   ssl_dhparam dhparam.pem;
+
+   return 301 https://wedding101.kro.kr$request_uri;
+}
+
+server {
+   listen 443 ssl;
+   server_name wedding101.kro.kr www.wedding101.kro.kr;
+   ssl on;
+   ssl_certificate fullchain.pem;
+   ssl_certificate_key privkey.pem;
+   ssl_trusted_certificate chain.pem;
+   ssl_dhparam dhparam.pem;
+
+   location / {
+
    }
 }
 # server {
