--- a/FE/wedding101/.conf/myApp.conf
+++ b/FE/wedding101/.conf/myApp.conf
@@ -35,7 +35,7 @@
 server {
     listen 80;
     listen [::]:80;
-    server_name i8a101.p.ssafy.io wedding101.kro.kr;
+    server_name wedding101.kro.kr www.wedding101.kro.kr;
 
     # 백엔드 연결 
     location /api { 
@@ -48,7 +48,7 @@ server {
 
     # 프론트엔드 연결
     location / {
-        proxy_pass http://nginx-react-container:3000;
+        proxy_pass http://i8a101.ssafy.io:3000;
         proxy_http_version 1.1;
         proxy_cache_bypass $http_upgrade;
         proxy_set_header   Upgrade $http_upgrade;
