--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -1,2 +1,6 @@
 FROM node:18.13.0
+WORKDIR /usr/src/app
+COPY ./package* /usr/src/app/
+RUN npm install
+COPY ./ /usr/src/app/
 CMD ["npm", "run", "start"]
