--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /usr/src/app
 COPY ./package* /usr/src/app/
 RUN npm install
 COPY ./ /usr/src/app/
-CMD ["npm", "run", "start"]
+CMD ["npm", "run", "build"]
