CI/CD : modify Dockerfile - debugging shell command
Former-commit-id: 17d292a5f00fe58edf76f72d73a2c6bd6202cb33

--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -4,4 +4,4 @@ COPY ./package* /usr/src/app/
 RUN npm install
 RUN npm install -g serve
 COPY ./ /usr/src/app/
-ENTRYPOINT "cd /usr/src/app/build && npm run build && serve -s build"
+ENTRYPOINT "cd /usr/src/app/build && ls"
