CI/CD : modify Dockerfile - debugging shell command 2
Former-commit-id: 3a6a51b4c8c15cfea170fa82a84b151f08a75eb0

--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -4,4 +4,4 @@ COPY ./package* /usr/src/app/
 RUN npm install
 RUN npm install -g serve
 COPY ./ /usr/src/app/
-ENTRYPOINT "cd /usr/src/app/build && ls"
+ENTRYPOINT ["cd /usr/src/app/build && ls"]
