CI/CD : modify Dockerfile - debugging shell command 5
Former-commit-id: 76799401d4d93c4ba0875be9cbb6b35a0f598dfb

--- a/FE/wedding101/Dockerfile
+++ b/FE/wedding101/Dockerfile
@@ -4,4 +4,4 @@ COPY ./package* /usr/src/app/
 RUN npm install
 RUN npm install -g serve
 COPY ./ /usr/src/app/
-ENTRYPOINT ["ls"]
+ENTRYPOINT ["serve", "-s", "build"]
