CI/CD : modify Dockerfile - download ffmpeg
Former-commit-id: cbfc077f7c34b99086772c2ac31fba405b7c3b7b

--- a/BE/wedding101/Dockerfile
+++ b/BE/wedding101/Dockerfile
@@ -1,5 +1,8 @@
 FROM openjdk:11-jdk-slim
 
+RUN apt-get update &&\
+    apt install ffmpeg
+
 ARG JAR_FILE=build/libs/*.jar
 
 COPY ${JAR_FILE} app.jar
