[BE] FFmpeg Wrapper 의존성 설정 및 application.yml 수정
Former-commit-id: d59419832dc50850d9c629b184595a48f794e7f8

--- a/BE/wedding101/src/main/resources/application.yml
+++ b/BE/wedding101/src/main/resources/application.yml
@@ -100,3 +100,13 @@ logging:
       amazonaws:
         util:
           EC2MetadataUtils: ERROR
+
+
+# ffmpeg Wrapper
+ffmpeg:
+  exe:
+    location: /ffmpeg/bin/ffmpeg.exe
+ffmprobe:
+  exe:
+    location: /ffmpeg/bin/ffprobe.exe
+
