--- a/BE/wedding101/Dockerfile
+++ b/BE/wedding101/Dockerfile
@@ -22,7 +22,8 @@
 FROM openjdk:11-jdk-slim
 
 RUN apt-get update &&\
-    apt install ffmpeg -y
+    apt install ffmpeg -y &&\
+    cd ~ && mkdir ffmpeg && cd ./ffmpeg && mkdir temp 
 
 ARG JAR_FILE=build/libs/*.jar
 
