[BE] FFmpeg BasePath 수정
Former-commit-id: 4ba98f75366863441237f40cd1bad9ae633277a1

--- a/BE/wedding101/src/main/resources/application.yml
+++ b/BE/wedding101/src/main/resources/application.yml
@@ -105,8 +105,8 @@ logging:
 # ffmpeg Wrapper
 ffmpeg:
   exe:
-    location: /ffmpeg/bin/ffmpeg.exe
+    location: /usr/bin/ffmpeg
 ffmprobe:
   exe:
-    location: /ffmpeg/bin/ffprobe.exe
+    location: /usr/bin/ffprobe
 
