--- a/BE/wedding101/Dockerfile
+++ b/BE/wedding101/Dockerfile
@@ -23,7 +23,7 @@ FROM openjdk:11-jdk-slim
 
 RUN apt-get update &&\
     apt install ffmpeg -y &&\
-    cd ~ && mkdir ffmpeg && cd ./ffmpeg && mkdir temp 
+    mkdir -p /root/ffmpeg/temp
 
 ARG JAR_FILE=build/libs/*.jar
 
