BE : FFmpeg 오류 수정
Former-commit-id: 24671921610b37b3c65ac5184e323548d97811ed

--- a/BE/wedding101/src/main/resources/application.yml
+++ b/BE/wedding101/src/main/resources/application.yml
@@ -102,10 +102,19 @@ logging:
           EC2MetadataUtils: ERROR
 
 # ffmpeg Wrapper
-ffmpeg:
-  exe:
-    location: /usr/bin/ffmpeg
-ffmprobe:
-  exe:
-    location: /usr/bin/ffprobe
+#ffmpeg:
+#  exe:
+#    location: /usr/bin/ffmpeg
+#ffmprobe:
+#  exe:
+#    location: /usr/bin/ffprobe
+#
+#ffmpeg:
+#  exe:
+#    location: /ffmpeg/bin/ffmpeg.exe
+#
+#ffmprobe:
+#  exe:
+#    location: /ffmpeg/bin/ffprobe.exe
+#
 
