--- a/BE/wedding101/Dockerfile
+++ b/BE/wedding101/Dockerfile
@@ -2,9 +2,10 @@ FROM openjdk:11-jdk-slim
 
 RUN apt-get update &&\
     apt install ffmpeg -y &&\
-    mkdir -p /root/ffmpeg/temp/image \
-	/root/ffmpeg/temp/video
+    mkdir -p /root/ffmpeg/temp/image /root/ffmpeg/temp/video
 
-COPY build/libs/*.jar app.jar
+ARG JAR_FILE=build/libs/*.jar
+
+COPY ${JAR_FILE} app.jar
 
 ENTRYPOINT ["java", "-jar", "/app.jar"]
