--- a/BE/wedding101/Dockerfile
+++ b/BE/wedding101/Dockerfile
@@ -1,29 +1,12 @@
-# # 1. Build Image
-# FROM ubuntu:20.04 AS builder
- 
-# # Install dependencies
-# RUN apt-get update &&\
-#     apt install -y sudo &&\
-#     sudo apt update &&\
-#     apt install -y ffmpeg
- 
-# # Build modules
-# RUN echo "ffmpeg -encoders"
- 
-# ------------------------------
-# # 2. Production Image
-# FROM busybox
-# WORKDIR /opt/greet/bin
- 
-# # Deploy modules
-# COPY --from=builder /go/src/github.com/asashiho/dockertext-greet/ .
-# ENTRYPOINT ["./greet"]
-
 FROM openjdk:11-jdk-slim
 
 RUN apt-get update &&\
     apt install ffmpeg -y &&\
     mkdir -p /root/ffmpeg/temp
+
+RUN apt-get update && apt-get install -y language-pack-ko
+RUN locale-gen ko_KR.UTF-8
+RUN update-locale LC_ALL=ko_KR.UTF-8 LANG=ko_KR.UTF-8
 
 ARG JAR_FILE=build/libs/*.jar
 
