CI/CD : handling DB-spring language issue 4
Former-commit-id: 4935896c95c771f6f31b1f15028647ff589d54fd

--- a/BE/wedding101/Dockerfile
+++ b/BE/wedding101/Dockerfile
@@ -1,9 +1,12 @@
 FROM openjdk:11-jdk-slim
 
 RUN apt-get update &&\
-    apt install ffmpeg locale language-pack-ko -y &&\
-    mkdir -p /root/ffmpeg/temp &&\
+    apt install ffmpeg &&\
+    mkdir -p /root/ffmpeg/temp
+
+RUN apt-get install -y locales language-pack-ko \
 	locale-gen ko_KR.utf8
+
 
 ARG JAR_FILE=build/libs/*.jar
 
