--- a/BE/wedding101/Dockerfile
+++ b/BE/wedding101/Dockerfile
@@ -1,7 +1,7 @@
 FROM openjdk:11-jdk-slim
 
 RUN apt-get update &&\
-    apt install ffmpeg &&\
+    apt install ffmpeg -y &&\
     mkdir -p /root/ffmpeg/temp
 
 RUN apt-get install -y locales language-pack-ko \
