--- a/BE/wedding101/Dockerfile
+++ b/BE/wedding101/Dockerfile
@@ -4,9 +4,7 @@ RUN apt-get update &&\
     apt install ffmpeg -y &&\
     mkdir -p /root/ffmpeg/temp
 
-RUN apt-get install -y locales language-pack-ko &&\
-	locale-gen ko_KR.utf8
-
+RUN apt-get install -y locales
 
 ARG JAR_FILE=build/libs/*.jar
 
