CI/CD : handling DB-spring language issue 9
Former-commit-id: b5baebe038598cba2f06621e7c3c31459123c080

--- a/BE/wedding101/Dockerfile
+++ b/BE/wedding101/Dockerfile
@@ -6,7 +6,9 @@ RUN apt-get update &&\
 
 RUN apt-get install -y locales
 
-RUN locale -a
+RUN locale -a &&\
+    apt-get install -y language-pack-ko &&\
+	locale -a 
 
 ARG JAR_FILE=build/libs/*.jar
 
