CI/CD : handling DB-spring language issue 10
Former-commit-id: e31db540384a0eda7bfcd35956d47f038e9c355b

--- a/BE/wedding101/Dockerfile
+++ b/BE/wedding101/Dockerfile
@@ -6,9 +6,10 @@ RUN apt-get update &&\
 
 RUN apt-get install -y locales
 
-RUN locale -a &&\
-    apt-get install -y language-pack-ko &&\
-	locale -a 
+RUN locale -a 
+
+RUN apt-get install -y language-pack-ko
+RUN locale -a 
 
 ARG JAR_FILE=build/libs/*.jar
 
