CI/CD : handling DB-spring language issue 11
Former-commit-id: 669376664aa0ee52329311515cc1bb9d518431ae

--- a/BE/wedding101/Dockerfile
+++ b/BE/wedding101/Dockerfile
@@ -4,11 +4,11 @@ RUN apt-get update &&\
     apt install ffmpeg -y &&\
     mkdir -p /root/ffmpeg/temp
 
-RUN apt-get install -y locales
+RUN apt-get install -y locales &&\
+	localedef -f UTF-8 -i ko_KR.UTF-8
 
-RUN locale -a 
+ENV LC_ALL ko_KR.UTF-8
 
-RUN apt-get install -y language-pack-ko
 RUN locale -a 
 
 ARG JAR_FILE=build/libs/*.jar
