--- a/BE/wedding101/Dockerfile_old
+++ b/BE/wedding101/Dockerfile_old
@@ -1,13 +1,17 @@
 FROM openjdk:11-jdk-slim
 
 RUN apt-get update &&\
-    apt install ffmpeg sudo vim -y &&\
+    apt install ffmpeg -y &&\
     mkdir -p /root/ffmpeg/temp
 
 RUN apt-get install -y locales
+
 RUN locale-gen ko_KR.UTF-8
-RUN sudo sed -i s/^# (ko_KR.UTF-8)/1/ /etc/locale.gen
-RUN sudo locale-gen
+
+RUN sed -i 's/^# \(ko_KR.UTF-8\)/\1/' /etc/locale.gen
+RUN locale-gen
+
+RUN locale -a 
 
 ARG JAR_FILE=build/libs/*.jar
 
