CI/CD : handling DB-spring language issue 20
Former-commit-id: 79c486a3e0af70843c3f8819ecb1e6481ce452c2

--- a/BE/wedding101/Dockerfile
+++ b/BE/wedding101/Dockerfile
@@ -1,10 +1,10 @@
 FROM openjdk:11-jdk-slim
 
 RUN apt-get update &&\
-    apt install ffmpeg sudo vim -y &&\
+    apt install ffmpeg -y &&\
     mkdir -p /root/ffmpeg/temp
 
-RUN apt-get install -y locales
+RUN apt-get install -y locales vim sudo
 RUN locale-gen ko_KR.UTF-8
 RUN sudo sed -i s/^# (ko_KR.UTF-8)/1/ /etc/locale.gen
 RUN sudo locale-gen
