CI/CD : handling DB-spring language issue 28
Former-commit-id: bc312f95575b26783c18e7291f047b74f3106e4a

--- a/BE/wedding101/build.gradle
+++ b/BE/wedding101/build.gradle
@@ -58,6 +58,11 @@ dependencies {
     //유효성 검사 처리
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
+compileJava.options.encoding = 'UTF-8'
+t
+asks.withType(JavaCompile) {
+	    options.encoding = 'UTF-8'
+}
 
 jar {
 	    enabled = false
