--- a/BE/wedding101/build.gradle
+++ b/BE/wedding101/build.gradle
@@ -59,9 +59,8 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
 }
 compileJava.options.encoding = 'UTF-8'
-t
-asks.withType(JavaCompile) {
-	    options.encoding = 'UTF-8'
+tasks.withType(JavaCompile) {
+    options.encoding = 'UTF-8'
 }
 
 jar {
