CI/CD : handling DB-spring language issue 33
Former-commit-id: 66c70dd0e645acf72a73e135bc3ecf4405439922

--- a/BE/wedding101/build.gradle
+++ b/BE/wedding101/build.gradle
@@ -26,6 +26,17 @@ compileJava.options.encoding = 'UTF-8'
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
+tasks.withType<JavaCompile> {
+    options.encoding = "UTF-8"
+}
+
+tasks.withType<Test> {
+    defaultCharacterEncoding = "UTF-8"
+}
+
+tasks.withType<Javadoc>{
+    options.encoding = "UTF-8"
+}
 
 dependencies {
     // Spring Cloud Starter AWS
