--- a/BE/wedding101/build.gradle
+++ b/BE/wedding101/build.gradle
@@ -27,11 +27,11 @@ tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
 }
 
-tasks.withType<Test> {
+tasks.withType(Test) {
     defaultCharacterEncoding = "UTF-8"
 }
 
-tasks.withType<Javadoc>{
+tasks.withType(Javadoc){
     options.encoding = "UTF-8"
 }
 
