--- a/BE/wedding101/build.gradle
+++ b/BE/wedding101/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     // MySQL connector j
     runtimeOnly 'com.mysql:mysql-connector-j'
     // spring security
-//    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     // spring oauth client2
 //    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     // spring boot starter web
