--- a/BE/wedding101/build.gradle
+++ b/BE/wedding101/build.gradle
@@ -34,6 +34,10 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
     // spring security
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    // Jwt
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'
     // spring oauth client2
 //    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
     // spring boot starter web
