BE : Security 관련 세부사항 수정
Former-commit-id: 1ed78ab4eab20b01aa84dd394a8f08204a526eb6

--- a/BE/wedding101/src/main/resources/application.yml
+++ b/BE/wedding101/src/main/resources/application.yml
@@ -74,3 +74,6 @@ logging:
       amazonaws:
         util:
           EC2MetadataUtils: ERROR
+
+jwt:
+  secret-key: VlwEyVBsYt9V7zq57TejMnVUyzblYcfPQye08f7MGVA9XkHa
