--- a/BE/wedding101/build.gradle
+++ b/BE/wedding101/build.gradle
@@ -61,7 +61,9 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
     // Swagger Ui
-    implementation 'org.springdoc:springdoc-openapi-ui:1.6.9'
+    // Swagger-ui
+    implementation("io.springfox:springfox-boot-starter:3.0.0")
+    implementation("io.springfox:springfox-swagger-ui:3.0.0")
     // logback
 //    implementation 'org.springframework.boot::spring-boot-starter-web'
     // ffmpeg
