--- a/FE/wedding101/package.json
+++ b/FE/wedding101/package.json
@@ -16,11 +16,12 @@
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
-    "react-datepicker": "^4.10.0",
     "react-calendar": "^4.0.0",
+    "react-datepicker": "^4.10.0",
     "react-dnd": "^16.0.1",
     "react-dom": "^18.2.0",
     "react-fullpage": "^0.1.19",
+    "react-helmet-async": "^1.3.0",
     "react-redux": "^8.0.5",
     "react-router": "^6.7.0",
     "react-router-dom": "^6.7.0",
