BE : Dockerfile 수정
Former-commit-id: 50f2b5a0d22f4a0a9e32e6ee19eb13471e092bda [formerly 8653a32f459af086a83a1b1425ca65b80c12804e]
Former-commit-id: ffc8d3ddc1e987b8cbbc37a31a3587cbf1da8df4

--- a/BE/wedding101/Dockerfile
+++ b/BE/wedding101/Dockerfile
@@ -2,7 +2,7 @@ FROM openjdk:11-jdk-slim
 
 RUN apt-get update &&\
     apt install ffmpeg -y &&\
-    mkdir -p /root/ffmpeg/temp
+    mkdir -p /root/ffmpeg/temp/image /root/ffmpeg/temp/video
 
 RUN apt-get install -y locales file vim sudo tzdata
 
