--- a/FE/wedding101/package.json
+++ b/FE/wedding101/package.json
@@ -28,6 +28,7 @@
     "react-scroll": "^1.8.9",
     "react-scroll-wheel-handler": "^2.2.0",
     "react-slick": "^0.29.0",
+    "react-spinners": "^0.13.8",
     "redux": "^4.2.1",
     "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
